; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_slave_initialize.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_slave_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@ETS_SLC0_INTR_SOURCE = common dso_local global i32 0, align 4
@sdio_intr = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@context = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdio_slave_initialize(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* null, i32** %5, align 8
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* @ETS_SLC0_INTR_SOURCE, align 4
  %8 = load i32, i32* @sdio_intr, align 4
  %9 = call i64 @esp_intr_alloc(i32 %7, i32 0, i32 %8, i32* null, i32** %5)
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @ESP_OK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  store i64 %14, i64* %2, align 8
  br label %35

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = call i64 @sdio_slave_hw_init(i32* %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @ESP_OK, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i64, i64* %4, align 8
  store i64 %22, i64* %2, align 8
  br label %35

23:                                               ; preds = %15
  %24 = load i32*, i32** %3, align 8
  %25 = call i64 @init_context(i32* %24)
  store i64 %25, i64* %4, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* @ESP_OK, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %23
  %30 = load i64, i64* %4, align 8
  store i64 %30, i64* %2, align 8
  br label %35

31:                                               ; preds = %23
  %32 = load i32*, i32** %5, align 8
  store i32* %32, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @context, i32 0, i32 0), align 8
  %33 = call i32 (...) @sdio_slave_reset()
  %34 = load i64, i64* @ESP_OK, align 8
  store i64 %34, i64* %2, align 8
  br label %35

35:                                               ; preds = %31, %29, %21, %13
  %36 = load i64, i64* %2, align 8
  ret i64 %36
}

declare dso_local i64 @esp_intr_alloc(i32, i32, i32, i32*, i32**) #1

declare dso_local i64 @sdio_slave_hw_init(i32*) #1

declare dso_local i64 @init_context(i32*) #1

declare dso_local i32 @sdio_slave_reset(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
